# CommunicationSystem

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  drone_gui_demo.py  main.cpp  main.py  pyproject.toml
.github/workflows/: ci.yml  cpp_ci.yml  python_ci.yml
include/: Config.hpp  Controller.hpp  Message.hpp  MockAIModel.hpp  MockController.hpp  RingBuffer.hpp  System.hpp  SystemClient.hpp  Utils.hpp
include/Python/: PyCallback.hpp  PyClient.hpp  PyPacket.hpp  PySystem.hpp
scripts/: Dockerfile.python  controller.py  drone.py  func_decorators.py  python_system_message.py  system_message.py
scripts/Crazyflie/: callback.py  crazyflie_drone.py  engine_cb.py  logconf.py  move_dispatch.py  pos_cb.py  vel_cb.py
scripts/GUI/: __init__.py  drawing.py  map_client.py  models.py  stats_window.py
src/: Config.cpp  Dockerfile.cpp  PythonBindings.cpp
src/Python/: PyClientImpl.cpp
