[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "drone-system"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pygame",
    "stable-baselines3",
]

[project.optional-dependencies]
crazyflie = [
    "cflib",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
