[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "drone-system"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pygame",
    "stable-baselines3",
]

[project.optional-dependencies]
crazyflie = [
    "cflib",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
